# RoboSR2CH10A

./: .gitignore  .gitworkflow.md  CHANGELOG.md  CMakeLists.txt  README.md  RoboSR2CH10A.js  ZIGBEE2MQTT_CONVERTER_SETUP.md  partitions.csv  sdkconfig.defaults
docs/: FLASH_ESPIDF.md  FLASH_LINUX.md  FLASH_WINDOWS.md  README.md  ZIGBEE2MQTT_SETUP.md
main/: CMakeLists.txt  device_config.h  device_gpio.c  idf_component.yml  main.c
