# CMakeLists.txt для компонента main
# 
# Этот файл определяет конфигурацию сборки для основного компонента приложения.
# Компонент main содержит главную логику приложения RoboSR2CH10A.

# Регистрация компонента в системе сборки ESP-IDF
idf_component_register(
    # SRC_DIRS - директории с исходными файлами (.c, .cpp, .S)
    # "." означает текущую директорию (main/)
    SRC_DIRS  "."
    
    # INCLUDE_DIRS - директории с заголовочными файлами (.h)
    # "." означает текущую директорию (main/)
    INCLUDE_DIRS "."
    
    # REQUIRES - зависимости от других компонентов ESP-IDF
    # esp-zigbee-lib - основная библиотека Zigbee стека
    # (автоматически добавляется через sdkconfig.defaults)
)

